# django-q-sentry

./: .gitignore  README.md  poetry.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py
django_q_sentry/: __init__.py  sentry.py
