[tool.poetry]
name = "django-q-sentry"
version = "0.1.5"
description = "Bringing Sentry error tracking to Django Q"
authors = ["Christo Goosen <christogoosen@gmail.com>", "Daniel Welch dwelch2102@gmail.com"]

[tool.poetry.dependencies]
python = "^3.6"
sentry-sdk = ">=0.16.5"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
