[tool.poetry]
name = "django-q-sentry"
version = "0.1.7"
description = "Bringing Sentry error tracking to Django Q"
authors = ["Christo Goosen <christogoosen@gmail.com>", "Daniel Welch dwelch2102@gmail.com"]

[tool.poetry.dependencies]
python = "^3.7"
sentry-sdk = ">=2.0.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
