[metadata]
name = django-q-sentry
version = attr: django-q-sentry.VERSION
author = Daniel Welch, Christo Goosen
author_email = dwelch2102@gmail.com, christogoosen@gmail.com
description = A Sentry support plugin for Django Q
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = django-q, sentry
license = MIT License
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    sentry-sdk>=2.0.0
    importlib-metadata; python_version<"3.10"

[options.packages.find]
exclude =
    dist*
    build*
    docs*
    .venv*# Inside of setup.cfg
